<resources>
    <string name="app_name">HS Win Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_deck">AddDeckActivity</string>
    <string name="no_deck">You don\'t have any deck yet. Press the + button at the top to add your first deck!</string>
    <string name="wins">Wins</string>
    <string name="loses">Loses</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_deck">Add a deck</string>
    <string name="dialog_class_picker_title">Pick a class</string>
    <string name="deck_name_required">The deck name is required.</string>
    <string name="must_choose_hero">You must choose a hero.</string>
    <string name="deck_name">Deck name</string>
    <string name="error_updating_deck">An error has occurred while updating your deck.</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loses_label">Loses:</string>
    <string name="wins_label">Wins:</string>
    <string name="edit_deck_title">Edit deck</string>
</resources>
